--- a/blog/src/main/resources/application-pro.yml
+++ b/blog/src/main/resources/application-pro.yml
@@ -2,8 +2,8 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/blog?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT
-    username: root
-    password: password
+    username:
+    password: 
   jpa:
     hibernate:
       ddl-auto: none
